WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42385
[chromium] WebViewClient::removeAutofillSuggestions is not passed the correct name
https://bugs.webkit.org/show_bug.cgi?id=42385
Summary
[chromium] WebViewClient::removeAutofillSuggestions is not passed the correct...
Scott Violet
Reported
2010-07-15 09:57:33 PDT
removeAutofillSuggestions is not always passed the correct name of the entry to remove.
Attachments
Initial fix
(1.59 KB, patch)
2010-07-15 10:01 PDT
,
Scott Violet
no flags
Details
Formatted Diff
Diff
Incorporates review feedback
(1.70 KB, patch)
2010-07-15 10:31 PDT
,
Scott Violet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Scott Violet
Comment 1
2010-07-15 10:01:10 PDT
Created
attachment 61681
[details]
Initial fix
David Holloway
Comment 2
2010-07-15 10:20:38 PDT
LGTM. One small style question. Might it be slightly cleaner to dispense with the temporary variable? I.e.: WebInputElement(static_cast<HTMLInputElement*>(element)).nameForAutofill();
Scott Violet
Comment 3
2010-07-15 10:31:43 PDT
Created
attachment 61684
[details]
Incorporates review feedback
David Holloway
Comment 4
2010-07-15 10:39:34 PDT
SLGTM.
WebKit Commit Bot
Comment 5
2010-07-15 16:31:28 PDT
Comment on
attachment 61684
[details]
Incorporates review feedback Clearing flags on attachment: 61684 Committed
r63489
: <
http://trac.webkit.org/changeset/63489
>
WebKit Commit Bot
Comment 6
2010-07-15 16:31:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug