2010-07-15  Scott Violet  <sky@chromium.org>

Reviewed by David Levin.

        [chromium] WebViewClient::removeAutofillSuggestions is not passed the correct name
        https://bugs.webkit.org/show_bug.cgi?id=42385

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::autocompleteHandleKeyEvent): Use WebInputElement::nameForAutofill() instead of name.

git-svn-id: svn://svn.chromium.org/blink/trunk@63489 bbb929c8-8fbe-4397-9dbb-9b2b20218538