third_party/WebKit/WebKit/chromium/src/WebViewImpl.cpp
@@ -95,6 +95,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebDragData.h"
 #include "WebFrameImpl.h"
 #include "WebImage.h"
+#include "WebInputElement.h"
 #include "WebInputEvent.h"
 #include "WebInputEventConversion.h"
 #include "WebKit.h"
@@ -597,8 +598,7 @@ bool WebViewImpl::autocompleteHandleKeyEvent(const WebKeyboardEvent& event)
         if (!m_autoFillPopupClient->canRemoveSuggestionAtIndex(selectedIndex))
             return false;
 
-        HTMLInputElement* inputElement = static_cast<HTMLInputElement*>(element);
-        WebString name = inputElement->name();
+        WebString name = WebInputElement(static_cast<HTMLInputElement*>(element)).nameForAutofill();
         WebString value = m_autoFillPopupClient->itemText(selectedIndex);
         m_client->removeAutofillSuggestions(name, value);
         // Update the entries in the currently showing popup to reflect the
